--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                 </tr>
         </table>
         <hr>
-        <a href="Hobbies.html">My Hobbies</a>
-        <a href="contact-me.html">Contact me</a>
+        <div class="edit">
+            <a href="Hobbies.html">My Hobbies</a>
+            <a href="contact-me.html">Contact me</a>
+        </div>
     </body>
 </html>
