--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul> 
             <li>Divine Favour International Academy</li>
             <li>Sagamu High School(Senior and Junior)</li> 
-            <li>Currently Federal University of Agriculture Abeokuta <a href="https://unaab.edu.ng/">(FUNAAB)</a> .</li></p>
+            <li>Currently Federal University of Agriculture Abeokuta <a href="https://unaab.edu.ng/">(FUNAAB)</a> .</li>
         </ul>
         <hr>
         <h3>Work Exerience</h3>
